--- a/packages/sitepackage/Resources/Private/Assets/Styles/components/header.css
+++ b/packages/sitepackage/Resources/Private/Assets/Styles/components/header.css
@@ -1,5 +1,5 @@
 .c-header {
-    color: var(--font-color);
+    color: var(--color-text);
     font-weight: 700;
     letter-spacing: -0.025em;
     line-height: 1;
